[package]
name = "farm_defence"
version = "0.1.0"
edition = "2021"
authors = ["Fishmaniac https://github.com/fishmaniac/farm_defence"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "image"]