[package]
name = "farm_defense"
version = "0.1.0"
edition = "2021"
authors = ["fishmaniac https://github.com/fishmaniac/farm_defense"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "image", "mixer"]
