[package]
name = "farm_defense"
version = "0.1.0"
edition = "2021"
authors = ["fishmaniac https://github.com/fishmaniac/farm_defense"]

[profile.release]
debug = true

[dependencies]

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "image", "mixer"]

[[test]]
name = "integration"
path = "tests/integration/astar.rs"